--- a/about.html
+++ b/about.html
@@ -38,13 +38,12 @@
    <body>
 
 <div id="mySidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="gallery.html">gallery</a>
-  <a href="testimonial.html">testimonial</a>
-  <a href="contact.html">Contact</a>
-</div>
+   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+   <a href="index.html">Home</a>
+   <a href="about.html">About</a>
+   <a href="catalogue.html">Catalogue</a>
+   <a href="contact.html">Contact</a>
+   </div>
 
 
 
@@ -56,7 +55,7 @@
                <div class="search_icon"><img src="images/search-icon.png"></div>
             </div>
             <div class="col-sm-4">
-               <div class="logo"><img src="images/logo.png"></div>
+               <div class="logo"><img src="images/abundanceLogo.jpg"></div>
             </div>
             <div class="col-sm-4">
                <div class="togle_3">
@@ -82,11 +81,9 @@
          <div class="about_img"><img src="images/about-img1.png" style="max-width: 100%;"></div>
          <h2 class="about_text"><strong>About <span style="color: #000;">Us</span></strong></h2>
          <div class="about_middle">
-            <p class="about_lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it </p>
+            <p class="about_lorem">Abundance Groceries strives to serve the community and maintain their trust by always providing the freshest, highest quality groceries at an affordable price, so that everyone can have the premium eating experience without having the premium price tag associated. Over the years, Abundance Groceries has been slowly growing in popularity and size, going from a family owned stall to a brick and mortar store with multiple employees. As the demand for quality groceries increases, we have been expanding operations, by ordering more stock, and staffing the store for longer hours, to allow locals to purchase more products. We believe that the next step in our mission is to move online</p>
          </div>
-         <div class="red_bt">
-            <button class="read_more">Read More</button>
-         </div>
+         
       </div>
    </div>
    <!-- about section end -->
