--- a/catalogue.html
+++ b/catalogue.html
@@ -38,12 +38,11 @@
    <body>
 
 <div id="mySidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="gallery.html">gallery</a>
-  <a href="testimonial.html">testimonial</a>
-  <a href="contact.html">Contact</a>
+   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+   <a href="index.html">Home</a>
+   <a href="about.html">About</a>
+   <a href="catalogue.html">Catalogue</a>
+   <a href="contact.html">Contact</a>
 </div>
 
 
@@ -81,8 +80,8 @@
       <div class="container">
          <div class="row">
             <div class="col-sm-12">
-               <h1 class="our_text"><strong>Our<span style="color: #000;">Cycles</span></strong></h1>
-               <p class="about_lorem">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
+               <h1 class="our_text"><strong>Our<span style="color: #000;">Products</span></strong></h1>
+               <p class="about_lorem">Shop here</p>
             </div>
          </div>
       </div>
@@ -91,13 +90,13 @@
             <div id="my_slider" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="d-block w-100" src="images/our-img-1.png" alt="First slide">
+                  <img class="d-block w-100" src="images/carrot.png" alt="Carrots">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="images/our-img-1.png" alt="Second slide">
+                  <img class="d-block w-100" src="images/avocado.png" alt="Avocadoes">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="images/our-img-1.png" alt="Third slide">
+                 <img class="d-block w-100" src="images/milk.png" alt="Milk">
                </div>
             </div>
                <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
