--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="gallery.html">gallery</a>
-  <a href="testimonial.html">testimonial</a>
+  <a href="catalogue.html">Catalogue</a>
   <a href="contact.html">Contact</a>
 </div>
 <div id="main">
@@ -51,10 +50,7 @@
         <div class="container-fluid">
          <div class="row">
             <div class="col-sm-4">
-               <div class="search_icon"><img src="images/search-icon.png"></div>
-            </div>
-            <div class="col-sm-4">
-               <div class="logo"><img src="images/logo.png"></div>
+               <div class="logo"><img src="images/abundanceLogo.jpg"></div>
             </div>
             <div class="col-sm-4">
                <div class="togle_3">
@@ -88,9 +84,9 @@
                      <div class="row marginii">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="carousel-sporrt_text ">
-                              <h1 class="sport_text"><strong>Sports<br><span style="color: #fff;">Cycle</span></strong></h1>
-                              <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content</p>
-                              <button class="boynow_bt">Boy Now</button>
+                              <h1 class="sport_text"><strong>Abundance Groceries<br></strong></h1>
+                              <p class="lorem_text">Abundance Groceries is an independent grocery store. Welcome to our new online store to get groceries delivered to your doorstep!</p>
+                              <button class="boynow_bt">Shop Now</button>
                               <button class="contact_bt">Contact Us</button>
                            </div>
                         </div>
@@ -108,9 +104,9 @@
                      <div class="row marginii">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="carousel-sporrt_text ">
-                              <h1 class="sport_text"><strong>Sports<br><span style="color: #fff;">Cycle</span></strong></h1>
-                              <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content</p>
-                              <button class="boynow_bt">Boy Now</button>
+                              <h1 class="sport_text"><strong>Abundance Groceries<br></strong></h1>
+                              <p class="lorem_text">Abundance Groceries is an independent grocery store. Welcome to our new online store to get groceries delivered to your doorstep!</p>
+                              <button class="boynow_bt">Shop Now</button>
                               <button class="contact_bt">Contact Us</button>
                            </div>
                         </div>
@@ -128,9 +124,9 @@
                      <div class="row marginii">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="carousel-sporrt_text ">
-                              <h1 class="sport_text"><strong>Sports<br><span style="color: #fff;">Cycle</span></strong></h1>
-                              <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content</p>
-                              <button class="boynow_bt">Boy Now</button>
+                              <h1 class="sport_text"><strong>Abundance Groceries<br></strong></h1>
+                              <p class="lorem_text">Abundance Groceries is an independent grocery store. Welcome to our new online store to get groceries delivered to your doorstep!</p>
+                              <button class="boynow_bt">Shop Now</button>
                               <button class="contact_bt">Contact Us</button>
                            </div>
                         </div>
@@ -153,10 +149,10 @@
    <div class="container-fluid">
    <div class="about_section">
       <div class="container">
-         <div class="about_img"><img src="images/about-img1.png" style="max-width: 100%;"></div>
+         <div class="about_img"><img src="images/img1.png" style="max-width: 100%;"></div>
          <h2 class="about_text"><strong>About <span style="color: #000;">Us</span></strong></h2>
          <div class="about_middle">
-            <p class="about_lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it </p>
+            <p class="about_lorem">Abundance Groceries strives to serve the community and maintain their trust by always providing the freshest, highest quality groceries at an affordable price, so that everyone can have the premium eating experience without having the premium price tag associated. </p>
          </div>
          <div class="red_bt">
             <button class="read_more">Read More</button>
@@ -165,43 +161,6 @@
    </div>
    </div>
    <!-- about section end -->
-   <!-- our section start -->
-   <div class="our_section">
-      <div class="container">
-         <div class="row">
-            <div class="col-sm-12">
-               <h1 class="our_text"><strong>Our <span style="color: #000;">Cycles</span></strong></h1>
-               <p class="about_lorem">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
-            </div>
-         </div>
-      </div>
-      <div class="our_section_2">
-         <div class="our_main">
-            <div id="my_slider" class="carousel slide" data-ride="carousel">
-               <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <img class="d-block w-100" src="images/our-img-1.png" alt="First slide">
-               </div>
-               <div class="carousel-item">
-                  <img class="d-block w-100" src="images/our-img-1.png" alt="Second slide">
-               </div>
-               <div class="carousel-item">
-                 <img class="d-block w-100" src="images/our-img-1.png" alt="Third slide">
-               </div>
-            </div>
-               <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
-                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                 <span class="sr-only">Previous</span>
-               </a>
-               <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
-                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                 <span class="sr-only">Next</span>
-               </a>
-            </div>
-          </div>
-          <button class="seemore_bt">See More</button>
-      </div>
-   </div>
    <div class="contact_section layout_padding">
       <div class="container">
          <h1 class="contact_text"><strong>Contact Us</strong></h1>
@@ -234,23 +193,6 @@
                  </div>
                </div>
             </div>
-   </div>
-   <!-- our section end -->
-   <!-- Testimonial section start -->
-   <div class="testimonial_section layout_padding">
-      <div class="container">
-         <h1 class="contact_text"><strong>Testimonial</strong></h1>
-         <p class="dolore_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna  </p>
-         <div class="images_3"><img src="images/img-3.png"></div>
-         <h2 class="rooty_text">Rooty</h2>
-         <p class="ice_text">(lcc)</p>
-         <div><img src="images/left-quote.png"></div>
-         <p class="dolore_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore  , quis nostrud exercitation </p>
-         <div class="right_quote"><img src="images/right-quote.png"></div>
-      </div> 
-   </div>
-
-   <!-- Testimonial section end -->
    <!-- footer section start -->
    <div class="footer_section layout_padding">
       <div class="container">
