--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
    <!-- about section start -->
    <div class="about_section layout_padding">
       <div class="container">
-         <div class="about_img"><img src="images/about-img1.png" style="max-width: 100%;"></div>
+         <div class="about_img"><img src="images/contact-bg.png" style="max-width: 100%;"></div>
          <h2 class="about_text"><strong>About <span style="color: #000;">Us</span></strong></h2>
          <div class="about_middle">
             <p class="about_lorem">Abundance Groceries strives to serve the community and maintain their trust by always providing the freshest, highest quality groceries at an affordable price, so that everyone can have the premium eating experience without having the premium price tag associated. Over the years, Abundance Groceries has been slowly growing in popularity and size, going from a family owned stall to a brick and mortar store with multiple employees. As the demand for quality groceries increases, we have been expanding operations, by ordering more stock, and staffing the store for longer hours, to allow locals to purchase more products. We believe that the next step in our mission is to move online</p>
