--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
    <div class="container-fluid">
    <div class="about_section">
       <div class="container">
-         <div class="about_img"><img src="images/img1.png" style="max-width: 100%;"></div>
+         <div class="about_img"><img src="images/contact-bg.png" style="max-width: 100%;"></div>
          <h2 class="about_text"><strong>About <span style="color: #000;">Us</span></strong></h2>
          <div class="about_middle">
             <p class="about_lorem">Abundance Groceries strives to serve the community and maintain their trust by always providing the freshest, highest quality groceries at an affordable price, so that everyone can have the premium eating experience without having the premium price tag associated. </p>
