--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,11 @@
    <body>
 
 <div id="mySidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="gallery.html">gallery</a>
-  <a href="testimonial.html">testimonial</a>
-  <a href="contact.html">Contact</a>
+   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+   <a href="index.html">Home</a>
+   <a href="about.html">About</a>
+   <a href="catalogue.html">Catalogue</a>
+   <a href="contact.html">Contact</a>
 </div>
 
 
